# AIAgentwithUV

./: README.md  main.py  pyproject.toml  vectorEntity.py
data/: dd_seed_data.csv  entity_seed_data.csv
repositories/: agent_communication.py  agent_metadata.py  vectordb_manager.py
router/: chatagent.py  datafidder.py
vectordboperation/: .gitignore  vectorEntity.py
