[project]
name = "aiagentwithuv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-ollama>=0.3.6",
    "pandas>=2.3.1",
    "rich>=14.1.0",
    "uvicorn>=0.35.0",
]
